# TJamCity

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  prepare_all.sh
CitySimulator/: CMakeLists.txt  TJamSimulator.cmake
CitySimulator/cmake/: mac_presets.json  presets.json  win_presets.json
CitySimulator/src/app/: Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SDLWidget.cpp  SDLWidget.h  appLauncher.cpp  appLauncher.h  app_launcher.cpp  app_launcher.h  main.cpp  stdafx.h
CitySimulator/src/app/data/: map_renderer_data.cpp  map_renderer_data.h  persistent_render_data.cpp  persistent_render_data.h  render_metrics_data.h  simulation_debug_data.h
CitySimulator/src/app/events/: map_events.h  project_events.h  vehicle_events.h
CitySimulator/src/app/fs/: FileSystem.cpp  FileSystem.h  file_system.cpp  file_system.h
CitySimulator/src/app/logic/: logic_base.h
CitySimulator/src/app/logic/map/: lanes_selector.cpp  lanes_selector.h  map_positioning.cpp  map_positioning.h  vehicle_targeting.cpp  vehicle_targeting.h
CitySimulator/src/app/project/: project.cpp  project.h
CitySimulator/src/app/render/: IRenderable.h  RenderBase.h  RenderConstants.h  RenderPrimitives.h  render_base.h  render_constants.h  render_events.h  render_events_manager.cpp  render_events_manager.h  render_primitives.cpp  render_primitives.h
CitySimulator/src/app/render/sdl/: MapRenderer.cpp  MapRenderer.h  RenderConstants.h  SDLRenderer.cpp  SDLRenderer.h  sdl_renderer.cpp  sdl_renderer.h
CitySimulator/src/app/settings/: GeneralSettings.h  RenderSettings.h  UserSettings.h  UserSettingsLoader.h  general_settings.h  render_settings.h  user_settings.h  user_settings_loader.h
CitySimulator/src/app/uiSystem/: UISystem.cpp  UISystem.h
CitySimulator/src/app/uiSystem/qtUI/: MainWindow.cpp  MainWindow.h  MapControlWidget.cpp  MapControlWidget.h  QTController.cpp  QTController.h  RenderMetricsWidget.cpp  RenderMetricsWidget.h
CitySimulator/src/app/ui_system/: ui_system.cpp  ui_system.h
CitySimulator/src/app/ui_system/debug_ui/: edge_information_widget.cpp  edge_information_widget.h  map_analyzer_widget.cpp  map_analyzer_widget.h  strategic_analyzer_widget.cpp  strategic_analyzer_widget.h  vehicle_analyze_widget.cpp  vehicle_analyze_widget.h
CitySimulator/src/app/ui_system/qt_ui/: main_window.cpp  map_control_widget.cpp  map_control_widget.h  qt_controller.cpp  qt_controller.h  render_metrics_widget.cpp  render_metrics_widget.h  time_control_widget.cpp  time_control_widget.h
CitySimulator/src/app/visualization/: RenderConstants.h  Scene.cpp  Scene.h  SceneCreator.cpp  SceneCreator.h  SceneNode.h  SceneSystem.cpp  SceneSystem.h  map_render_events_listener.cpp  map_render_events_listener.h  scene_creator.cpp  scene_node.h  scene_system.cpp  scene_system.h  visualization_constants.h
CitySimulator/src/app/visualization/elements/: MapElement.cpp  MapElement.h  MapRenderer.cpp  MapRenderer.h  map_element.cpp  map_element.h  path_renderer.cpp  path_renderer.h  vehicle_renderer.cpp  vehicle_renderer.h
CitySimulator/src/app/visualization/persistent_data/: map_elements_data.h
CitySimulator/src/common/: CMakeLists.txt
CitySimulator/src/common/include/common/: bits_enum.h  const_string.h  container_ptr_handler.h  definitions.h  hash_functions.h  help_fixtures.h  object_pool.h  stdafx.h
CitySimulator/src/common/include/common/math/: bounding_box.h
CitySimulator/src/common/include/common/message_dispatcher/: Event.h  connection.h  member_function_handler.h  message_dispatcher.h  message_handler_base.h
CitySimulator/src/common/src/: hash_functions.cpp  stdafx.cpp
CitySimulator/src/common/src/math/: bounding_box.cpp
CitySimulator/src/common/tests/: benchmark_example.cpp  common.tests.cpp  container_ptr_handler.cpp  object_pool.cpp  object_pool_benchmarks.cpp  object_pool_tests.cpp  rtree_tests.cpp  stdafx.h
CitySimulator/src/common/tests/message_dispatcher/: connection_tests.cpp  message_dispatcher_tests.cpp  test_events.h
CitySimulator/src/common/tests/performance/: object_pool_benchmarks.cpp  object_pool_operations_benchmarks.cpp
CitySimulator/src/core/: CMakeLists.txt  test.cpp  test.h
CitySimulator/src/core/include/core/: core_includes.h  definitions.h  enum_flags.h  math_constants.h  random_generator.h  simulation_constants.h  stdafx.h
CitySimulator/src/core/src/: random_generator.cpp
CitySimulator/src/core/src/dataLayer/: WorldCreator.cpp  WorldData.cpp  contraction_tmp.cpp  data_types.cpp  road_network.cpp
CitySimulator/src/core/src/data_layer/: contraction_tmp.cpp  data_types.cpp  lane.cpp  node.cpp  road_network.cpp  vehicle.cpp  way_info.cpp  world_creator.cpp  world_data.cpp
CitySimulator/src/core/src/map_math/: contraction_builder.cpp  coordinates.cpp  earth_map.cpp  lane_connector_builder.cpp  path_finder.cpp
CitySimulator/src/core/src/simulation/: simulation_system.cpp  time_module.cpp
CitySimulator/src/core/src/utils/: debugger.cpp
CitySimulator/src/core/tests/: core.tests.cpp  data_loader_mixin.cpp  data_loader_mixin.h  generic_store_tests.cpp  lane_connector_tests.cpp  merge_split_tests.cpp  path_finder_tests.cpp  random_generator_tests.cpp  simulation_module_tests.cpp  smoothed_value_tests.cpp  stdafx.cpp  stdafx.h
CitySimulator/src/core/tests/data_layer/: spatial_grid_tests.cpp  workd_creator_tests.cpp  world_utils.cpp  world_utils.h
CitySimulator/src/core/tests/simulation/: merge_split_integration_tests.cpp  simulation_module_tests.cpp  simulation_tests_common.cpp  simulation_tests_common.h  vehicle_movement_module_tests.cpp
CitySimulator/src/core/tests/test_data/: complex_streets.osmx  cross_junction.osmx  cross_merge.osmx  lane_mismatch.osmx  ramp_merge.osmx  simple_grid.osmx  test_lanes.osmx
CitySimulator/src/launcher/: CMakeLists.txt  main.cpp
ci/: format_all.sh  (+2 more)
sdks/: CMakeLists.txt
sdks/benchmark/: CMakeLists.txt
sdks/gtest/: CMakeLists.txt
sdks/nlohmann_json/: CMakeLists.txt
sdks/pugixml/: CMakeLists.txt
sdks/tracy/: CMakeLists.txt
(+91 files in other folders)
